@@ -47,6 +47,7 @@ lintian (2.3.1) UNRELEASED; urgency=low
 
   * lib/Spelling.pm:
     + [ADB] Add corrections for "nam" (name) and "nams" (names).
+    + [RG] Add some more spelling errors.
 
   * man/lintian.1:
     + [RG] Document deprecation of unpack levels.
